assets/scss/_header.scss
/* Header ------------------------------------------------- */
header {
	position: fixed;
	top: 0px;
	left: 0px;
	right: 0px;
	height: 60px;
	background-color: rgba($cForeground, .98);
	border-bottom: 1px solid black(.15);
	z-index: 2;
	opacity: 0;

	@include breakpoint('medium') {
		height: 140px;
	}

	&.show {
		opacity: 1;
	}
}

	/* About ------------------------------------------------- */
	header #about {
		float: left;
		margin: 14px 18px 14px 14px;

		@include breakpoint('medium') {
			float: none;
			width: 100%;
			margin: 0;
			border-bottom: 1px solid #eee;
			text-align: center;
		}

		&.hidden {
			display: none;

			@include breakpoint('medium') {
				display: block;
			}
		}
	}

		header #about img#logo {
			float: left;
			width: 32px;
			height: 32px;
			background-color: black(.1);
			border-radius: 100px;

			@include breakpoint('medium') {
				float: none;
				display: inline-block;
				margin: 10px 0 0 0;
			}
		}

		header #about h1#name {
			float: left;
			margin: 7px 0 0 14px;
			padding: 0;
			font-size: 16px;
			font-weight: 400;
			color: black(.8);

			@include breakpoint('medium') {
				float: none;
				display: block;
				margin: 7px 0 10px;
				width: 100%;
				text-align: center;
			}
		}

	/* Close ------------------------------------------------- */
	header a#close {
		float: left;
		margin: 14px 18px 14px 14px;
		padding: 8px 10px;
		color: black(1);
		text-decoration: none;
		background-color: black(.1);
		border-radius: 5px;
		cursor: pointer;
		z-index: 1;
		display: none;

		@include breakpoint(34em) {
			margin: 13px 18px 14px 14px;
		}

		& span.icon {
			margin-right: 6px;
		}
	}

	/* Menu ------------------------------------------------- */
	header menu {
		float: left;
		margin: 14px 0;
		padding: 8px 0 8px 18px;
		border-left: 1px black(.1) solid;

		@include breakpoint('medium') {
			padding: 7px 0 8px 18px;
			border-left: none;
		}

		&.hidden { display: none; }
	}

		header menu a {
			float: left;
			margin-right: 16px;
			color: black(.5);
			text-decoration: none;

			@include vendorize(transition, color $duration);

			&:hover { color: black(1); }
		}

	/* Buy ------------------------------------------------- */
	#buy_wrapper {
		margin: 0;
		padding: 0;
	}

	#buy_wrapper img.paymentIcon {
		float: right;
		margin: 19px 0 0 5px;

		@include breakpoint(34em) {
			display: none;
		}
	}

	#buy_wrapper a#buy {
		float: right;
		margin: 14px;
		padding: 8px 14px;
		color: white(1);
		text-decoration: none;
		background-color: $cMain;
		background-image: linear-gradient(to bottom, $cMain, darken($cMain, 6%));
		box-shadow: 0 1px 2px black(.1);
		border-radius: 100px;
		cursor: pointer;
		display: none;

		@include vendorize(transition, background-color $duration);

		@include breakpoint(34em) {
			margin: 13px 14px;
		}

		span.icon {
			margin-right: 6px;
		}

		&:hover {
			background-color: lighten($cMain, 5%);
			background-image: linear-gradient(to bottom, lighten($cMain, 5%), $cMain);
		}

		&:active {
			background-color: darken($cMain, 5%);
			background-image: linear-gradient(to bottom, darken($cMain, 5%), darken($cMain, 10%));
		}

		&.error,
		&.error:hover,
		&.error:active {
			background-color: #BD3737;
			background-image: linear-gradient(to bottom, #BD3737, darken(#BD3737, 6%));
		}
	}

